[tool.poetry]
name = "cozy-prog-lang"
version = "0.1.0"
description = ""
authors = ["Myxi <myxi@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.9.1"
rope = "^1.10.0"
python-lsp-server = "^1.8.1"
pylsp-rope = "^0.1.11"
python-lsp-black = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
